5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1577_1559.log
== TEST (2019-03-19 01:37:54) 
-- CODE:
print.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print.upper("Ada Lovelace foi a primeira programadora da historia.")
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:38:24) 
-- CODE:
print(.upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira programadora da historia."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:38:34) 
-- CODE:
print(upper("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(upper("Ada Lovelace foi a primeira programadora da historia."))
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:39:35) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.").upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:39:47) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.").upper("aaa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper("aaa")
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:40:24) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.").upper()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper()
AttributeError: 'NoneType' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:40:54) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 01:40:58) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 01:41:00) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.14138
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
